--- a/calculo-basal/index.html
+++ b/calculo-basal/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calcule Aki - Calcule seu Gasto Energético Basal</title>
-  <meta name="description" content="Calcuke Aki - Calculadora do Gasto Energético Basal">
-  <meta property="og:description" content="Calcuke Aki - Calculadora do Gasto Energético Basal" />
+  <meta name="description" content="Calcule aki - Calculadora do Gasto Energético Basal">
+  <meta property="og:description" content="Calcule aki - Calculadora do Gasto Energético Basal" />
   <meta property="og:url" content="https://calculeaki.com.br/" />
   <link rel="shortcut icon" href="img/favicon.ico">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Calcuke Aki - Calculadora do Gasto Energético Basal" />
+  <meta property="og:title" content="Calcule aki - Calculadora do Gasto Energético Basal" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 
