--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calcule Aki - Calculos na palma da sua mão</title>
-  <meta name="description" content="Calcuke Aki - Calculos na palma da sua mão">
-  <meta property="og:description" content="Calcuke Aki - Calculos na palma da sua mão">
+  <meta name="description" content="Calcule Aki - Calculos na palma da sua mão">
+  <meta property="og:description" content="Calcule Aki - Calculos na palma da sua mão">
   <meta property="og:image”content" content="https://i.postimg.cc/QCVg3ykB/logo.png">  
   <meta property="og:url" content="https://calculeaki.com.br/" />
   <link rel="shortcut icon" href="img/favicon.ico">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Calcuke Aki - Calculadora do Método 50/30/20 para controle financeiro" />
+  <meta property="og:title" content="Calcule Aki - Calculadora do Método 50/30/20 para controle financeiro" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
