Add a tag do google

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Calcule Aki - Diversos calculos na palma da sua mão." />
   <link rel="stylesheet" href="css/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELTMPWC9S4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ELTMPWC9S4');
+  </script>
 </head>
 <body>
   <header>
