--- a/consumo-agua/index.html
+++ b/consumo-agua/index.html
@@ -12,6 +12,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Calcule Aki - Calculadora da quantidade de água diária ideal" />
   <link rel="stylesheet" href="css/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELTMPWC9S4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ELTMPWC9S4');
+  </script>
 </head>
 
 <body>
