Add Gerador de senha ao index principal

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <p>Calcule a média de consumo de combustível do seu veículo.</p>
       </a>
 
+      <a class ="card" href="./gerador-senhas/index.html">          
+        <h3>Gerador de Senhas</h3>
+        <p>Gere senhas fortes e seguras.</p>
+      </a>
+
       <a class ="card" href="./hora-trabalhada/index.html">          
         <h3>Valor da Hora de Trabalho</h3>
         <p>Calcule o quanto você ganha por hora.</p>
