--- a/gerador-senhas/index.html
+++ b/gerador-senhas/index.html
@@ -25,12 +25,9 @@
 
 <body>
   <section class="container">
-    <h1>Gere senhas seguras</h1>
-    <p>Use o Gerador de senhas para obter senhas fortes e seguras</p>
-    <div class="boxFormulario">
-      <form action="" class="formulario" id="formulario">
-        <input type="text" id="senhaGerada" placeholder="" not-required>
-    </div>
+    <h1>Gerador de senhas</h1>
+    <p>Obtenha senhas seguras em instantes.</p>
+
     <div class="inputs">
       <div class="inputsResponsive">
         <input type="checkbox" id="letraMaiuscula" class="identificador" value="ABCDEFGHIJKLMNOPQRSTUVWXYZÇ">
@@ -55,6 +52,10 @@
           <label for="numerosCaracteres">Tamanho da Senha</label>
         </div>
       </div>
+    </div>
+    <div class="boxFormulario">
+      <form action="" class="formulario" id="formulario">
+        <input type="text" id="senhaGerada" placeholder="" not-required>
     </div>
     <input type="submit" class="btnVoltar" value="Gerar Senha" id="btnGerarSenha">
     <a href="../index.html" class="btnIndex">Voltar para a Home</a>
