--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Calcule Aki - Calculadoras de porcentagem, média do consumo de combustível, hora trabalhada, entre outros.">
   <meta property="og:image”content" content="https://imgur.com/a/BZ80Jm3">  
   <meta property="og:url" content="https://calculeaki.com.br/" />
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Calcule Aki - Diversos calculos na palma da sua mão." />
   <link rel="stylesheet" href="css/style.css">
