Add a função de Copiar para o ClipBoard a senha

--- a/gerador-senhas/index.html
+++ b/gerador-senhas/index.html
@@ -53,11 +53,12 @@
         </div>
       </div>
     </div>
+    <input type="submit" class="btnVoltar" value="Gerar Senha" id="btnGerarSenha">
     <div class="boxFormulario">
       <form action="" class="formulario" id="formulario">
         <input type="text" id="senhaGerada" placeholder="" not-required>
+        <button class="btnCopiar" id="botao-copiar">Copiar Senha</button>
     </div>
-    <input type="submit" class="btnVoltar" value="Gerar Senha" id="btnGerarSenha">
     <a href="../index.html" class="btnIndex">Voltar para a Home</a>
   </form>
   </section>
