--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Calcule Aki - Calculos na palma da sua mão</title>
   <meta name="description" content="Calcule Aki - Calculadoras de porcentagem, média do consumo de combustível, hora trabalhada, entre outros.">
   <meta property="og:description" content="Calcule Aki - Calculadoras de porcentagem, média do consumo de combustível, hora trabalhada, entre outros.">
-  <meta property="og:image" content="https://i.imgur.com/N88WGgB.png">  
+  <meta property="og:image" content="https://i.imgur.com/N88WGgB.png" />  
   <meta property="og:url" content="https://calculeaki.com.br/" />
   <link rel="shortcut icon" href="favicon.ico">
   <meta property="og:type" content="website" />
