Arrumando o Consumo de Agua

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <a class ="card" href="./consumo-agua/index.html">          
         <h3>Consumo Ideal de Água</h3>
-          <p>Calcule a área do triângulo.</p>
+          <p>Descubra o seu consumo ideal de Água.</p>
         </a>        
         
         <a class ="card" href="./area-quadrado/index.html">          
