Adicionado o contador de palavras

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
           <p>Use o método 50/30/20 para organizar a sua vida financeira.</p>
         </a>
 
+        <a class ="card" href="./Contador de Palavras/index.html">          
+          <h3>Contador de Palavras</h3>
+          <p>Conte quantas palavras seu texto ou documento possui.</p>
+        </a>
+
       </section>
       <footer>
         <h4>Contato</h4>
